<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mostrar__datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.caparros.daniel.formulario.Mostrar_Datos">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
     android:id="@+id/tvConfirmar"
     android:text="@string/tv_confirmar"
     android:layout_width="match_parent"
     android:layout_height="73dp"
     android:textSize="30sp"
     android:textAlignment="center"
     android:layout_gravity="center_vertical"
     android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv1"
                android:layout_marginRight="12sp"
                android:textSize="20sp"/>


            <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Fecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv2"
                android:layout_marginRight="12sp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Telefono"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv3"
                android:layout_marginRight="12sp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv4"
                android:layout_marginRight="12sp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv5"
                    android:layout_marginRight="12sp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    />

            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editar"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:onClick="btnEditar_onClick" />


    </LinearLayout>

</LinearLayout>


